fixed interrupted generated code across various models and ran final analysis